cfn_ec2.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "EC2 instance in a new VPC with subnet, route table, IGW, and security group"

Resources:
  CfnVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.1.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: cfn-vpc

  CfnIgw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: cfn-igw

  CfnVpcGwAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref CfnVpc
      InternetGatewayId: !Ref CfnIgw

  CfnPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref CfnVpc
      CidrBlock: 10.1.1.0/24
      MapPublicIpOnLaunch: true   
      AvailabilityZone: !Select [ 0, !GetAZs "" ]
      Tags:
        - Key: Name
          Value: cfn-public-subnet

  CfnPublicRt:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref CfnVpc
      Tags:
        - Key: Name
          Value: cfn-public-rt

  CfnPublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref CfnPublicRt
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref CfnIgw

  CfnSubnetRtAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref CfnPublicSubnet
      RouteTableId: !Ref CfnPublicRt

  CfnSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP
      VpcId: !Ref CfnVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: cfn-sg

  CfnEc2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: ami-0e564a15089b1ff77
      KeyName: MYEC2INSTANCE
      NetworkInterfaces:
        - AssociatePublicIpAddress: true  
          DeviceIndex: 0
          SubnetId: !Ref CfnPublicSubnet
          GroupSet:
            - !Ref CfnSg

Outputs:
  InstancePublicIP:
    Description: "Public IP of the EC2 instance"
    Value: !GetAtt CfnEc2Instance.PublicIp
